--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <p><b><center><h3>社会をデザイン</h3></center></b></p>
         <center>１年次から取り組む高度な専門科目によって情報技術の専門知識を高め、確かなスキルを身につけることで、活躍する未来のデザインが始まります。<br>
         長期企業内実習などの実践的なカリキュラムを通じて経験を積み、未来の方向性を現場から探ることで、確かなキャリアデザインが可能になります。</center><br>
-   <div class="img1"><img src="images/yoneyama.jpg" width="500px" height="500px"></div> 
-   <div class="img2"><img src="images/yoneyama2.jpeg"  height="250px"></div> 
-   <div class="img3"><img src="images/yoneyama3.jpeg"  height="230px"></div> 
+   <div class="img1"><img src="yoneyama.jpg" width="500px" height="500px"></div> 
+   <div class="img2"><img src="yoneyama2.jpeg"  height="250px"></div> 
+   <div class="img3"><img src="yoneyama3.jpeg"  height="230px"></div> 
 
 
 
@@ -37,9 +37,9 @@
     <p><b><center><h3> 事業創造できる人へ</h3></center></b></p>
     <center>理論と実践を学び、新しい価値やビジネスを想像する力をつけることができます。<br>
         「経営管理」「マーケティング＆セールス」「会計」を軸に、 ICT活用や地域資源活用、課題解決能力を幅広く養うことができます。<br></center>
-        <div class="img4"><img src="images/shichikuyama.jpg"  height="450px"></div>
-        <div class="img5"><img src="images/shichikuyama2.jpeg"  height="225px"></div>
-        <div class="img6"><img src="images/shichikuyama3.jpeg"  height="225px"></div>
+        <div class="img4"><img src="shichikuyama.jpg"  height="450px"></div>
+        <div class="img5"><img src="shichikuyama2.jpeg"  height="225px"></div>
+        <div class="img6"><img src="shichikuyama3.jpeg"  height="225px"></div>
     </div></div>
     
     <div class="three"><div id="a3">アニメ・マンガ学部</div><div class="text">
@@ -48,17 +48,17 @@
         あなたは多くのライバルに恵まれ、強い刺激を受け、自分の想像を超える成長を遂げることになるでしょう。<br>
         デジタルネイティブ、SNSネイティブ世代に生きる感性と表現力で、これからの時代をリードするプロフェッショナルになりましょう。<br>
     </center>
-    <div class="img7"><img src="images/furumachi.jpeg"  height="450px"></div>
-    <div class="img8"><img src="images/furumachi2.jpeg"  height="250px"></div>
-    <div class="img9"><img src="images/furumachi3.jpeg"  height="250px"></div>
+    <div class="img7"><img src="furumachi.jpeg"  height="450px"></div>
+    <div class="img8"><img src="furumachi2.jpeg"  height="250px"></div>
+    <div class="img9"><img src="furumachi3.jpeg"  height="250px"></div>
     </div></div>
 
     <div class="four"><div id="a4">ギャラリー</div>
     <p><center><br>←KAISHILAB<br><br><br>紫竹山キャンパス→<br><br><br><br><br><br><br><br><br>古町ルフルキャンパス→<br><br><br>←米山キャンパス</center></p>
-    <div class="img10"><img src="images/yoneyama-gyarari.jpeg"  height="250px"></div>
-    <div class="img11"><img src="images/yoneyama-gyarari2.jpeg" width="400px" height="300px"></div>
-    <div class="img12"><img src="images/shichikuyama-gyarari.jpeg" width="400px" height="300px"></div>
-    <div class="img13"><img src="images/furumachi-gyarari-.jpeg" width="400px" height="300px"></div>
+    <div class="img10"><img src="yoneyama-gyarari.jpeg"  height="250px"></div>
+    <div class="img11"><img src="yoneyama-gyarari2.jpeg" width="400px" height="300px"></div>
+    <div class="img12"><img src="shichikuyama-gyarari.jpeg" width="400px" height="300px"></div>
+    <div class="img13"><img src="furumachi-gyarari-.jpeg" width="400px" height="300px"></div>
 </div>
     <div class="five"><div id="a5">問い合わせ</div>
     <form>
